--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "Modules/Resources"]
 	path = Modules/Resources
 	url = https://github.com/iCookbook/Resources
+[submodule "Modules/Networking"]
+	path = Modules/Networking
+	url = https://github.com/iCookbook/Networking
