feat: add `Persistance` module to the coordinator

--- a/Cookbook.xcodeproj/xcshareddata/xcschemes/Cookbook.xcscheme
+++ b/Cookbook.xcodeproj/xcshareddata/xcschemes/Cookbook.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "F0BF8C00290EC17000D271CD"
+               BuildableName = "CookbookTests.xctest"
+               BlueprintName = "CookbookTests"
+               ReferencedContainer = "container:Cookbook.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
