--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "Modules/Resources"]
 	path = Modules/Resources
 	url = https://github.com/iCookbook/Resources
+[submodule "Modules/Persistence"]
+	path = Modules/Persistence
+	url = https://github.com/iCookbook/Persistence
