--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "Modules/Persistence"]
 	path = Modules/Persistence
 	url = https://github.com/iCookbook/Persistence
+[submodule "Modules/CommonUI"]
+	path = Modules/CommonUI
+	url = https://github.com/iCookbook/CommonUI
