feat: add new submodule 'Logger' and some comments

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "Modules/Common"]
 	path = Modules/Common
 	url = https://github.com/iCookbook/Common
+[submodule "Modules/Logger"]
+	path = Modules/Logger
+	url = https://github.com/iCookbook/Logger
