refactor: commit latest versions of dev pods

--- a/Cookbook.xcodeproj/xcshareddata/xcschemes/Cookbook.xcscheme
+++ b/Cookbook.xcodeproj/xcshareddata/xcschemes/Cookbook.xcscheme
@@ -103,8 +103,7 @@
             </BuildableReference>
          </TestableReference>
          <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "16194B3091E93D1E32D2C2FA022E7D0E"
